[gd_scene load_steps=18 format=3 uid="uid://bxnp4wh21nff5"]

[ext_resource type="Script" path="res://scripts/level_9.gd" id="1_5f03t"]
[ext_resource type="PackedScene" uid="uid://bkpuw7t2myv2b" path="res://scenes/tile_map.tscn" id="1_kmw4y"]
[ext_resource type="PackedScene" uid="uid://dl5ayp7fe1v6b" path="res://scenes/player.tscn" id="2_c1yks"]
[ext_resource type="PackedScene" uid="uid://bj2kfy31qak10" path="res://scenes/hud.tscn" id="3_7h1cy"]
[ext_resource type="PackedScene" uid="uid://hmeu4mn3ib8b" path="res://scenes/slime.tscn" id="5_6uc80"]
[ext_resource type="PackedScene" uid="uid://cpxe4vse68eos" path="res://scenes/goblin.tscn" id="6_iq8c3"]
[ext_resource type="Texture2D" uid="uid://djk840sorg5ub" path="res://mystic_woods_free_2.1 use/sprites/objects/chest_01.png" id="7_oymso"]
[ext_resource type="Texture2D" uid="uid://dpux8xh3d6ujb" path="res://FREE RPG Icon Pack - 100+ Accessories and Armor - Clockwork Raven Studios/icons64x64.png" id="8_nxk57"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_od0am"]
size = Vector2(23, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_bloaj"]
atlas = ExtResource("7_oymso")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_asjx8"]
atlas = ExtResource("7_oymso")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_swb3s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bloaj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asjx8")
}],
"loop": true,
"name": &"end",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_220pd"]
atlas = ExtResource("8_nxk57")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_47tr2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_220pd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nfcnn"]
radius = 29.0908

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmq4m"]
size = Vector2(14, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_2fou7"]
radius = 42.107

[node name="level_9" type="Node2D"]
script = ExtResource("1_5f03t")

[node name="TileMap" parent="." instance=ExtResource("1_kmw4y")]
layer_0/tile_data = PackedInt32Array(-196613, 1, 0, -131077, 1, 0, -65541, 1, 0, -5, 1, 0, 65531, 1, 0, 131067, 1, 0, 196603, 1, 0, 262139, 1, 0, 327675, 1, 0, 393211, 1, 0, 458747, 1, 0, 524283, 1, 0, 589819, 1, 0, 655355, 1, 0, 720891, 1, 0, 786427, 1, 0, 851963, 1, 0, 917499, 1, 0, 983035, 1, 0, 1048571, 1, 0, 1114107, 1, 0, 1179643, 1, 0, 1245179, 1, 0, 1310714, 1, 0, 1376250, 1, 0, 1441786, 1, 0, 1507322, 1, 0, 1572858, 1, 0, 1638394, 1, 0, 1638395, 1, 0, 1638396, 1, 0, 1638397, 1, 0, 1638398, 1, 0, 1638399, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572879, 1, 0, 1572880, 1, 0, 1572881, 1, 0, 1572882, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1572894, 1, 0, 1572895, 1, 0, 1572896, 1, 0, 1572897, 1, 0, 1572898, 1, 0, 1507362, 1, 0, 1441826, 1, 0, 1376290, 1, 0, 1310754, 1, 0, 1245218, 1, 0, 1179681, 1, 0, 1114145, 1, 0, 1048609, 1, 0, 983073, 1, 0, 917537, 1, 0, 852001, 1, 0, 786465, 1, 0, 720929, 1, 0, 655393, 1, 0, 589857, 1, 0, 524321, 1, 0, 458785, 1, 0, 393249, 1, 0, 327713, 1, 0, 262177, 1, 0, 196641, 1, 0, 131105, 1, 0, 65569, 1, 0, 33, 1, 0, -65504, 1, 0, -131040, 1, 0, -196576, 1, 0, -196577, 1, 0, -196578, 1, 0, -196579, 1, 0, -196580, 1, 0, -196581, 1, 0, -196582, 1, 0, -131047, 1, 0, -131048, 1, 0, -131049, 1, 0, -131050, 1, 0, -131051, 1, 0, -131052, 1, 0, -131053, 1, 0, -196590, 1, 0, -196591, 1, 0, -196592, 1, 0, -196593, 1, 0, -196594, 1, 0, -196595, 1, 0, -196596, 1, 0, -262132, 1, 0, -262133, 1, 0, -262134, 1, 0, -262135, 1, 0, -327672, 1, 0, -327673, 1, 0, -327674, 1, 0, -327675, 1, 0, -327676, 1, 0, -327677, 1, 0, -327678, 1, 0, -327679, 1, 0, -327680, 1, 0, -262145, 1, 0, -262146, 1, 0, -262147, 1, 0, -262148, 1, 0, -262149, 1, 0, 786448, 131072, 1, 720912, 131072, 1, 655376, 131072, 1, 589840, 131072, 1, 524304, 327680, 1, 458768, 65536, 1, 393232, 65536, 1, 327696, 65536, 1, 262160, 65536, 1, 196624, 65536, 1, 131088, 65536, 0, 65552, 1, 0, 16, 1, 0, -65520, 1, 0, -131056, 1, 0, -131057, 1, 0, -131058, 1, 0, -131059, 1, 0, -131060, 1, 0, -131061, 1, 0, -196597, 1, 0, -196598, 1, 0, -196599, 1, 0, -196600, 1, 0, -262136, 1, 0, -262137, 1, 0, -262138, 1, 0, -262139, 1, 0, -262140, 1, 0, -262141, 1, 0, -262142, 1, 0, -262143, 1, 0, -262144, 1, 0, -196609, 1, 0, -196610, 1, 0, -196611, 1, 0, -196612, 1, 0, -131076, 1, 0, -65540, 1, 0, -4, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 327676, 1, 0, 393212, 1, 0, 458748, 1, 0, 524284, 1, 0, 589820, 1, 0, 655356, 1, 0, 720892, 1, 0, 786428, 1, 0, 851964, 1, 0, 917500, 1, 0, 983036, 1, 0, 1048572, 1, 0, 1114108, 1, 0, 1179644, 1, 0, 1245180, 1, 0, 1310716, 1, 0, 1310715, 1, 0, 1376251, 1, 0, 1441787, 1, 0, 1507323, 1, 0, 1572859, 1, 0, 1572860, 1, 0, 1507324, 1, 0, 1441788, 1, 0, 1376252, 1, 0, 1376253, 1, 0, 1310717, 1, 0, 1245181, 1, 0, 1179645, 1, 0, 1114109, 1, 0, 1048573, 1, 0, 983037, 1, 0, 917501, 131072, 1, 851965, 131072, 1, 786429, 131072, 1, 720893, 131072, 1, 655357, 131072, 1, 589821, 131072, 1, 524285, 1, 0, 458749, 1, 0, 393213, 1, 0, 327677, 1, 0, 262141, 1, 0, 196605, 1, 0, 131069, 1, 0, 65533, 1, 0, -3, 1, 0, -65539, 1, 0, -131075, 1, 0, -131074, 1, 0, -65538, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 589822, 131072, 1, 655358, 131072, 1, 720894, 131072, 1, 786430, 131072, 1, 851966, 131072, 1, 917502, 131072, 1, 983038, 1, 0, 1048574, 1, 0, 1114110, 1, 0, 1179646, 1, 0, 1245182, 1, 0, 1310718, 1, 0, 1376254, 1, 0, 1441790, 1, 0, 1441789, 1, 0, 1507325, 1, 0, 1572861, 1, 0, 1572862, 1, 0, 1507326, 1, 0, 1507327, 1, 0, 1441791, 1, 0, 1376255, 1, 0, 1310719, 1, 0, 1245183, 1, 0, 1179647, 1, 0, 1114111, 1, 0, 1048575, 1, 0, 983039, 1, 0, 917503, 131072, 2, 851967, 131072, 1, 786431, 131072, 1, 720895, 131072, 1, 655359, 131072, 1, 589823, 131072, 0, 524287, 1, 0, 458751, 1, 0, 393215, 1, 0, 327679, 1, 0, 262143, 1, 0, 196607, 1, 0, 131071, 1, 0, 65535, 1, 0, -1, 1, 0, -65537, 1, 0, -131073, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 131072, 0, 589824, 131072, 1, 655360, 131072, 1, 720896, 131072, 1, 786432, 131072, 1, 851968, 131072, 2, 917504, 1, 0, 983040, 1, 0, 1048576, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1245184, 1, 0, 1310720, 1, 0, 1376256, 1, 0, 1441792, 1, 0, 1507328, 1, 0, 1572863, 1, 0, 1507329, 1, 0, 1441793, 1, 0, 1376257, 1, 0, 1310721, 1, 0, 1245185, 1, 0, 1179649, 1, 0, 1114113, 1, 0, 1048577, 1, 0, 983041, 1, 0, 917505, 1, 0, 851969, 131072, 2, 786433, 131072, 1, 720897, 131072, 1, 655361, 131072, 1, 589825, 131072, 1, 524289, 131072, 0, 458753, 1, 0, 393217, 1, 0, 327681, 1, 0, 262145, 1, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 1, 1, 0, -65535, 1, 0, -131071, 1, 0, -196607, 1, 0, -196606, 1, 0, -131070, 1, 0, -65534, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 131072, 0, 589826, 131072, 1, 655362, 131072, 1, 720898, 131072, 1, 786434, 131072, 1, 851970, 131072, 2, 917506, 1, 0, 983042, 1, 0, 1048578, 1, 0, 1114114, 1, 0, 1179650, 1, 0, 1245186, 1, 0, 1310722, 1, 0, 1376258, 1, 0, 1441794, 1, 0, 1507330, 1, 0, 1507331, 1, 0, 1441795, 1, 0, 1376259, 1, 0, 1310723, 1, 0, 1245187, 1, 0, 1179651, 1, 0, 1114115, 1, 0, 1048579, 1, 0, 983043, 1, 0, 917507, 1, 0, 851971, 131072, 2, 786435, 131072, 1, 720899, 131072, 1, 655363, 131072, 1, 589827, 131072, 1, 524291, 131072, 0, 458755, 1, 0, 393219, 1, 0, 327683, 1, 0, 262147, 1, 0, 196611, 1, 0, 131075, 1, 0, 65539, 1, 0, 3, 1, 0, -65533, 1, 0, -131069, 1, 0, -196605, 1, 0, -196604, 1, 0, -131068, 1, 0, -65532, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 327684, 1, 0, 393220, 1, 0, 458756, 1, 0, 524292, 131072, 0, 589828, 131072, 1, 655364, 131072, 1, 720900, 131072, 1, 786436, 131072, 1, 851972, 131072, 2, 917508, 1, 0, 983044, 1, 0, 1048580, 1, 0, 1114116, 1, 0, 1179652, 1, 0, 1245188, 1, 0, 1310724, 1, 0, 1376260, 1, 0, 1441796, 1, 0, 1507332, 1, 0, 1507333, 1, 0, 1441797, 1, 0, 1376261, 1, 0, 1310725, 1, 0, 1245189, 1, 0, 1179653, 1, 0, 1114117, 1, 0, 1048581, 1, 0, 983045, 1, 0, 917509, 1, 0, 851973, 131072, 2, 786437, 131072, 1, 720901, 131072, 1, 655365, 131072, 1, 589829, 131072, 1, 524293, 131072, 0, 458757, 1, 0, 393221, 1, 0, 327685, 1, 0, 262149, 1, 0, 196613, 1, 0, 131077, 1, 0, 65541, 1, 0, 5, 1, 0, -65531, 1, 0, -131067, 1, 0, -196603, 1, 0, -196602, 1, 0, -131066, 1, 0, -65530, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 131072, 0, 589830, 131072, 1, 655366, 131072, 1, 720902, 131072, 1, 786438, 131072, 1, 851974, 131072, 2, 917510, 1, 0, 983046, 1, 0, 1048582, 1, 0, 1114118, 1, 0, 1179654, 1, 0, 1245190, 1, 0, 1310726, 1, 0, 1376262, 1, 0, 1441798, 1, 0, 1507334, 1, 0, 1507335, 1, 0, 1441799, 1, 0, 1376263, 1, 0, 1310727, 1, 0, 1245191, 1, 0, 1179655, 1, 0, 1114119, 1, 0, 1048583, 1, 0, 983047, 1, 0, 917511, 1, 0, 851975, 131072, 2, 786439, 131072, 1, 720903, 131072, 1, 655367, 131072, 1, 589831, 131072, 1, 524295, 131072, 0, 458759, 1, 0, 393223, 1, 0, 327687, 1, 0, 262151, 1, 0, 196615, 1, 0, 131079, 1, 0, 65543, 1, 0, 7, 1, 0, -65529, 1, 0, -131065, 1, 0, -196601, 1, 0, -131064, 1, 0, -65528, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 131072, 0, 589832, 131072, 1, 655368, 131072, 1, 720904, 131072, 1, 786440, 131072, 1, 851976, 131072, 2, 917512, 1, 0, 983048, 1, 0, 1048584, 1, 0, 1114120, 1, 0, 1179656, 1, 0, 1245192, 1, 0, 1310728, 1, 0, 1376264, 1, 0, 1441800, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1441801, 1, 0, 1376265, 1, 0, 1310729, 1, 0, 1245193, 1, 0, 1179657, 1, 0, 1114121, 1, 0, 1048585, 1, 0, 983049, 1, 0, 917513, 1, 0, 851977, 131072, 2, 786441, 131072, 1, 720905, 131072, 1, 655369, 131072, 1, 589833, 131072, 1, 524297, 131072, 0, 458761, 1, 0, 393225, 1, 0, 327689, 1, 0, 262153, 1, 0, 196617, 1, 0, 131081, 1, 0, 65545, 1, 0, 9, 1, 0, -65527, 1, 0, -131063, 1, 0, -131062, 1, 0, -65526, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 131072, 0, 589834, 131072, 1, 655370, 131072, 1, 720906, 131072, 1, 786442, 131072, 1, 851978, 131072, 2, 917514, 1, 0, 983050, 1, 0, 1048586, 1, 0, 1114122, 1, 0, 1179658, 1, 0, 1245194, 1, 0, 1310730, 1, 0, 1376266, 1, 0, 1441802, 1, 0, 1507338, 1, 0, 1507339, 1, 0, 1441803, 1, 0, 1376267, 1, 0, 1310731, 1, 0, 1245195, 1, 0, 1179659, 1, 0, 1114123, 1, 0, 1048587, 1, 0, 983051, 1, 0, 917515, 1, 0, 851979, 131072, 2, 786443, 131072, 1, 720907, 131072, 1, 655371, 131072, 1, 589835, 131072, 1, 524299, 131072, 0, 458763, 1, 0, 393227, 1, 0, 327691, 1, 0, 262155, 1, 0, 196619, 1, 0, 131083, 1, 0, 65547, 1, 0, 11, 1, 0, -65525, 1, 0, -65524, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 131072, 0, 589836, 131072, 1, 655372, 131072, 1, 720908, 131072, 1, 786444, 131072, 1, 851980, 131072, 2, 917516, 1, 0, 983052, 1, 0, 1048588, 1, 0, 1114124, 1, 0, 1179660, 1, 0, 1245196, 1, 0, 1310732, 1, 0, 1376268, 1, 0, 1441804, 1, 0, 1507340, 1, 0, 1507341, 1, 0, 1441805, 1, 0, 1376269, 1, 0, 1310733, 1, 0, 1245197, 1, 0, 1179661, 1, 0, 1114125, 1, 0, 1048589, 1, 0, 983053, 1, 0, 917517, 1, 0, 851981, 131072, 2, 786445, 131072, 1, 720909, 131072, 1, 655373, 131072, 1, 589837, 131072, 1, 524301, 131072, 0, 458765, 1, 0, 393229, 1, 0, 327693, 1, 0, 262157, 1, 0, 196621, 1, 0, 131085, 1, 0, 65549, 1, 0, 13, 1, 0, -65523, 1, 0, -65522, 1, 0, 14, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 1, 0, 458766, 1, 0, 524302, 131072, 0, 589838, 131072, 1, 655374, 131072, 1, 720910, 131072, 1, 786446, 131072, 1, 851982, 131072, 2, 917518, 1, 0, 983054, 1, 0, 1048590, 1, 0, 1114126, 1, 0, 1179662, 1, 0, 1245198, 1, 0, 1310734, 1, 0, 1376270, 1, 0, 1441806, 1, 0, 1507342, 1, 0, 1507343, 1, 0, 1441807, 1, 0, 1376271, 1, 0, 1310735, 1, 0, 1245199, 1, 0, 1179663, 1, 0, 1114127, 1, 0, 1048591, 1, 0, 983055, 1, 0, 917519, 1, 0, 851983, 131072, 2, 786447, 131072, 1, 720911, 131072, 1, 655375, 131072, 1, 589839, 131072, 1, 524303, 131072, 0, 458767, 1, 0, 393231, 1, 0, 327695, 1, 0, 262159, 1, 0, 196623, 1, 0, 131087, 1, 0, 65551, 1, 0, 15, 1, 0, -65521, 1, 0, 851984, 131072, 2, 917520, 1, 0, 983056, 1, 0, 1048592, 1, 0, 1114128, 1, 0, 1179664, 1, 0, 1245200, 1, 0, 1310736, 1, 0, 1376272, 1, 0, 1441808, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1441809, 1, 0, 1376273, 1, 0, 1310737, 1, 0, 1245201, 1, 0, 1179665, 1, 0, 1114129, 1, 0, 1048593, 1, 0, 983057, 1, 0, 917521, 1, 0, 851985, 131072, 2, 786449, 131072, 1, 720913, 131072, 1, 655377, 131072, 1, 589841, 131072, 1, 524305, 131072, 1, 458769, 131072, 1, 393233, 131072, 1, 327697, 131072, 1, 262161, 131072, 1, 196625, 131072, 1, 131089, 131072, 0, 65553, 1, 0, 17, 1, 0, -65519, 1, 0, -131055, 1, 0, -131054, 1, 0, -65518, 1, 0, 18, 1, 0, 65554, 1, 0, 131090, 131072, 0, 196626, 131072, 1, 262162, 131072, 1, 327698, 131072, 1, 393234, 131072, 1, 458770, 131072, 1, 524306, 131072, 1, 589842, 131072, 1, 655378, 131072, 1, 720914, 131072, 1, 786450, 131072, 1, 851986, 131072, 2, 917522, 1, 0, 983058, 1, 0, 1048594, 1, 0, 1114130, 1, 0, 1179666, 1, 0, 1245202, 1, 0, 1310738, 1, 0, 1376274, 1, 0, 1441810, 1, 0, 1507346, 1, 0, 1507347, 1, 0, 1441811, 1, 0, 1376275, 1, 0, 1310739, 1, 0, 1245203, 1, 0, 1179667, 1, 0, 1114131, 1, 0, 1048595, 1, 0, 983059, 1, 0, 917523, 1, 0, 851987, 131072, 2, 786451, 131072, 1, 720915, 131072, 1, 655379, 131072, 1, 589843, 131072, 1, 524307, 131072, 1, 458771, 131072, 1, 393235, 131072, 1, 327699, 131072, 1, 262163, 131072, 1, 196627, 131072, 1, 131091, 131072, 0, 65555, 1, 0, 19, 1, 0, -65517, 1, 0, -65516, 1, 0, 20, 1, 0, 65556, 1, 0, 131092, 131072, 0, 196628, 131072, 1, 262164, 131072, 1, 327700, 131072, 1, 393236, 131072, 1, 458772, 131072, 1, 524308, 131072, 1, 589844, 131072, 1, 655380, 131072, 1, 720916, 131072, 1, 786452, 131072, 1, 851988, 131072, 2, 917524, 1, 0, 983060, 1, 0, 1048596, 1, 0, 1114132, 1, 0, 1179668, 1, 0, 1245204, 1, 0, 1310740, 1, 0, 1376276, 1, 0, 1441812, 1, 0, 1507348, 1, 0, 1507349, 1, 0, 1441813, 1, 0, 1376277, 1, 0, 1310741, 1, 0, 1245205, 1, 0, 1179669, 1, 0, 1114133, 1, 0, 1048597, 1, 0, 983061, 1, 0, 917525, 1, 0, 851989, 196608, 2, 786453, 196608, 1, 720917, 196608, 1, 655381, 196608, 1, 589845, 196608, 1, 524309, 196608, 1, 458773, 196608, 1, 393237, 196608, 1, 327701, 196608, 1, 262165, 196608, 1, 196629, 196608, 1, 131093, 196608, 0, 65557, 1, 0, 21, 1, 0, -65515, 1, 0, -65514, 1, 0, 22, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 1, 0, 327702, 1, 0, 393238, 1, 0, 458774, 1, 0, 524310, 1, 0, 589846, 1, 0, 655382, 1, 0, 720918, 1, 0, 786454, 1, 0, 851990, 1, 0, 917526, 1, 0, 983062, 1, 0, 1048598, 1, 0, 1114134, 1, 0, 1179670, 1, 0, 1245206, 1, 0, 1310742, 1, 0, 1376278, 1, 0, 1441814, 1, 0, 1507350, 1, 0, 1507351, 1, 0, 1441815, 1, 0, 1376279, 1, 0, 1310743, 1, 0, 1245207, 1, 0, 1179671, 1, 0, 1114135, 1, 0, 1048599, 1, 0, 983063, 1, 0, 917527, 1, 0, 851991, 1, 0, 786455, 1, 0, 720919, 1, 0, 655383, 1, 0, 589847, 1, 0, 524311, 1, 0, 458775, 1, 0, 393239, 1, 0, 327703, 1, 0, 262167, 1, 0, 196631, 1, 0, 131095, 1, 0, 65559, 1, 0, 23, 1, 0, -65513, 1, 0, -65512, 1, 0, 24, 1, 0, 65560, 1, 0, 131096, 1, 0, 196632, 1, 0, 262168, 1, 0, 327704, 1, 0, 393240, 1, 0, 458776, 1, 0, 524312, 1, 0, 589848, 1, 0, 655384, 1, 0, 720920, 1, 0, 786456, 1, 0, 851992, 1, 0, 917528, 1, 0, 983064, 1, 0, 1048600, 1, 0, 1114136, 1, 0, 1179672, 1, 0, 1245208, 1, 0, 1310744, 1, 0, 1376280, 1, 0, 1441816, 1, 0, 1507352, 1, 0, 1507353, 1, 0, 1441817, 1, 0, 1376281, 1, 0, 1310745, 1, 0, 1245209, 1, 0, 1179673, 1, 0, 1114137, 1, 0, 1048601, 1, 0, 983065, 1, 0, 917529, 1, 0, 851993, 1, 0, 786457, 1, 0, 720921, 1, 0, 655385, 1, 0, 589849, 1, 0, 524313, 1, 0, 458777, 1, 0, 393241, 1, 0, 327705, 1, 0, 262169, 1, 0, 196633, 1, 0, 131097, 1, 0, 65561, 1, 0, 25, 1, 0, -65511, 1, 0, -65510, 1, 0, -131046, 1, 0, -131045, 1, 0, -65509, 1, 0, 27, 1, 0, 26, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 1, 0, 327706, 1, 0, 393242, 1, 0, 458778, 1, 0, 524314, 1, 0, 589850, 1, 0, 655386, 1, 0, 720922, 1, 0, 786458, 1, 0, 851994, 1, 0, 917530, 1, 0, 983066, 1, 0, 1048602, 1, 0, 1114138, 1, 0, 1179674, 1, 0, 1245210, 1, 0, 1310746, 1, 0, 1376282, 1, 0, 1441818, 1, 0, 1507354, 1, 0, 1507355, 1, 0, 1441819, 1, 0, 1376283, 1, 0, 1310747, 1, 0, 1245211, 1, 0, 1179675, 1, 0, 1114139, 1, 0, 1048603, 1, 0, 983067, 1, 0, 917531, 1, 0, 851995, 1, 0, 786459, 1, 0, 720923, 1, 0, 655387, 1, 0, 589851, 1, 0, 524315, 1, 0, 458779, 1, 0, 393243, 1, 0, 327707, 1, 0, 262171, 1, 0, 196635, 1, 0, 131099, 1, 0, 65563, 1, 0, 65564, 1, 0, 28, 1, 0, -65508, 1, 0, -131044, 1, 0, -131043, 1, 0, -65507, 1, 0, 29, 1, 0, 65565, 1, 0, 131101, 1, 0, 131100, 1, 0, 196636, 1, 0, 262172, 1, 0, 327708, 1, 0, 393244, 1, 0, 458780, 1, 0, 524316, 1, 0, 589852, 1, 0, 655388, 1, 0, 720924, 1, 0, 786460, 1, 0, 851996, 1, 0, 917532, 1, 0, 983068, 1, 0, 1048604, 1, 0, 1114140, 1, 0, 1179676, 1, 0, 1245212, 1, 0, 1310748, 1, 0, 1376284, 1, 0, 1441820, 1, 0, 1507356, 1, 0, 1507357, 1, 0, 1441821, 1, 0, 1376285, 1, 0, 1310749, 1, 0, 1245213, 1, 0, 1179677, 1, 0, 1114141, 1, 0, 1048605, 1, 0, 983069, 1, 0, 917533, 1, 0, 851997, 1, 0, 786461, 1, 0, 720925, 1, 0, 655389, 1, 0, 589853, 1, 0, 524317, 1, 0, 458781, 1, 0, 393245, 1, 0, 327709, 1, 0, 262173, 1, 0, 196637, 1, 0, 196638, 1, 0, 131102, 1, 0, 65566, 1, 0, 30, 1, 0, -65506, 1, 0, -131042, 1, 0, -131041, 1, 0, -65505, 1, 0, 31, 1, 0, 65567, 1, 0, 131103, 1, 0, 196639, 1, 0, 262175, 1, 0, 262174, 1, 0, 327710, 1, 0, 393246, 1, 0, 458782, 1, 0, 524318, 1, 0, 589854, 1, 0, 655390, 1, 0, 720926, 1, 0, 786462, 1, 0, 851998, 1, 0, 917534, 1, 0, 983070, 1, 0, 1048606, 1, 0, 1114142, 1, 0, 1179678, 1, 0, 1245214, 1, 0, 1310750, 1, 0, 1376286, 1, 0, 1441822, 1, 0, 1507358, 1, 0, 1507359, 1, 0, 1441823, 1, 0, 1376287, 1, 0, 1310751, 1, 0, 1245215, 1, 0, 1179679, 1, 0, 1114143, 1, 0, 1048607, 1, 0, 983071, 1, 0, 917535, 1, 0, 851999, 1, 0, 786463, 1, 0, 720927, 1, 0, 655391, 1, 0, 589855, 1, 0, 524319, 1, 0, 458783, 1, 0, 393247, 1, 0, 327711, 1, 0, 327712, 1, 0, 262176, 1, 0, 196640, 1, 0, 131104, 1, 0, 65568, 1, 0, 32, 1, 0, 393248, 1, 0, 458784, 1, 0, 524320, 1, 0, 589856, 1, 0, 655392, 1, 0, 720928, 1, 0, 786464, 1, 0, 852000, 1, 0, 917536, 1, 0, 983072, 1, 0, 1048608, 1, 0, 1114144, 1, 0, 1179680, 1, 0, 1245216, 1, 0, 1310752, 1, 0, 1376288, 1, 0, 1441824, 1, 0, 1507360, 1, 0, 1507361, 1, 0, 1441825, 1, 0, 1376289, 1, 0, 1310753, 1, 0, 1245217, 1, 0)
layer_2/tile_data = PackedInt32Array(983042, 393218, 7, 983058, 393218, 7, 917510, 655362, 0, 917517, 655362, 0, 262147, 2, 5, 327694, 524290, 6, 65545, 524290, 6)

[node name="Player" parent="." instance=ExtResource("2_c1yks")]
position = Vector2(24, 156)

[node name="Hud" parent="." instance=ExtResource("3_7h1cy")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 0, 400, 0, 402, 293, -1, 292, -0.722687, 211.858, -24, 211, -24, 126, -0.425125, 125.861, 0, 3, -3, 3, -110, 29, -127, 418, 608, 464, 549, -106, -6, -89)

[node name="level_6_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_6_transition"]
position = Vector2(-13.5, 168)
shape = SubResource("RectangleShape2D_od0am")

[node name="Slime" parent="." instance=ExtResource("5_6uc80")]
position = Vector2(263, 245)

[node name="Slime2" parent="." instance=ExtResource("5_6uc80")]
position = Vector2(178, 59)

[node name="Slime3" parent="." instance=ExtResource("5_6uc80")]
position = Vector2(152, 245)

[node name="Goblin" parent="." instance=ExtResource("6_iq8c3")]
position = Vector2(371, 199)

[node name="Goblin2" parent="." instance=ExtResource("6_iq8c3")]
position = Vector2(104, 54)

[node name="box" type="AnimatedSprite2D" parent="."]
position = Vector2(305, 52)
sprite_frames = SubResource("SpriteFrames_swb3s")

[node name="Helmet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-185, 122)
scale = Vector2(0.171875, 0.171875)
sprite_frames = SubResource("SpriteFrames_47tr2")
metadata/_edit_group_ = true

[node name="helmet_pickup" type="Area2D" parent="Helmet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Helmet/helmet_pickup"]
shape = SubResource("CircleShape2D_nfcnn")

[node name="box collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box collision"]
position = Vector2(305, 51.5)
shape = SubResource("RectangleShape2D_kmq4m")

[node name="box_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box_area"]
position = Vector2(305, 56)
shape = SubResource("CircleShape2D_2fou7")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 258.0
offset_top = 15.0
offset_right = 395.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 11
text = "%50 Damage Buff"

[connection signal="body_entered" from="level_6_transition" to="." method="_on_level_6_transition_body_entered"]
[connection signal="body_entered" from="Helmet/helmet_pickup" to="." method="_on_helmet_pickup_body_entered"]
[connection signal="body_entered" from="box_area" to="." method="_on_box_area_body_entered"]
[connection signal="body_exited" from="box_area" to="." method="_on_box_area_body_exited"]
